# PRY1-DLP

./: .gitignore  Instrucciones.md  README.md  SNAP_GLIBC_WORKAROUND.md  SOLUTION_SUMMARY.md  YALex.md  package-lock.json  run_tests.sh
desktop-app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop-app/scripts/: launch-clean.sh  start-vite-if-needed.mjs  tauri-run.mjs
desktop-app/src/: App.tsx  api.ts  styles.css  types.ts
desktop-app/src-tauri/: Cargo.toml  new_file.txt  tauri.conf.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/output/: lexer_generated_tauri.py
desktop-app/src-tauri/src/: lib.rs  main.rs
examples/: simple.yal
manual_cases/: IDE_USE_CASES.md
manual_cases/input/: charset_stress.txt  error_heavy.txt  fuzz_01.txt  fuzz_02.txt  fuzz_03.txt  fuzz_04.txt  fuzz_05.txt  fuzz_06.txt  fuzz_07.txt  fuzz_08.txt  fuzz_09.txt  fuzz_10.txt  fuzz_11.txt  fuzz_12.txt  fuzz_13.txt  fuzz_14.txt  fuzz_15.txt  fuzz_16.txt  fuzz_17.txt  fuzz_18.txt  fuzz_19.txt  fuzz_20.txt  fuzz_21.txt  fuzz_22.txt  fuzz_23.txt  fuzz_24.txt  fuzz_25.txt  fuzz_26.txt  fuzz_27.txt  fuzz_28.txt  fuzz_29.txt  fuzz_30.txt  fuzz_31.txt  fuzz_32.txt  fuzz_33.txt  fuzz_34.txt  fuzz_35.txt  fuzz_36.txt  fuzz_37.txt  fuzz_38.txt  (+6 more)
manual_cases/output/: high_massive_generated_run_2.txt  high_massive_run_3.txt  ide_generated_lexer.py  ide_new_case.yal  lexer_high_massive.py  (+3 more)
output/: lexer_generated_tauri.py
src/: bridge_cli.py  main.py
tests/: test_ascii_constraints.py  test_extreme_scenarios.py  test_yalex_pipeline.py
(+28 files in other folders)
