[package]
name = "yalex_studio"
version = "0.1.0"
description = "IDE de escritorio para YALex"
authors = ["Angel"]
edition = "2021"

[lib]
name = "yalex_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.2", features = [] }
rfd = "0.14"
